docs(CHANGELOG.md): update changelog for version 24.9.3 with new features and fixes style(zadark.scss): adjust opacity and color for title-name in dark mode fix(zadark.scss): update background color for pinned items in dark mode fix(zadark.scss): remove redundant media viewer styles for non-dark mode feat(zadark-popup-viewer.js): add script to handle theme switching for popup viewer build(package.json): bump version to 14.1 for new features and fixes refactor(zadark-pc.js): rename variable for clarity and add function to write popup viewer file feat(zadark-pc.js): inject scripts into popup-viewer.html for dark mode support

--- a/src/core/scss/zadark.scss
+++ b/src/core/scss/zadark.scss
@@ -660,11 +660,12 @@ html[data-zadark-theme="dark"] {
     -webkit-font-smoothing: auto;
 
     .title-name {
-      opacity: 0;
+      opacity: 1;
     }
 
     .title-name.unfocus {
-      opacity: 0;
+      opacity: 1;
+      color: var(--text-secondary);
     }
 
     #main-tab {
@@ -1164,7 +1165,7 @@ html[data-zadark-theme="dark"] {
       }
 
       &.pinned {
-        background-color: var(--WA10);
+        background-color: var(--WA15);
         &.selected {
           background-color: var(--layer-background-selected);
         }
@@ -2470,28 +2471,4 @@ body.zadark {
   }
 
   @include translate.translate-message();
-}
-
-html:not([data-zadark-theme]) {
-  .media-viewer {
-    .reacts-list,
-    .msg-reaction-icon {
-      border: 1px solid #3d3f40; // var(--white-message-action-border);
-      background-color: #2c2e2f; // var(--white-message-action);
-    }
-
-    .msg-reaction-icon .default-react-icon-thumb {
-      filter: brightness(2);
-    }
-
-    .reaction-emoji-list {
-      color: hsla(0, 0%, 27%, 0.7); // var(--WA70);
-      border: 0.5px solid #3d3f40; //  var(--NG30);
-      background-color: #232526; // var(--WA100);
-    }
-
-    .total-reacts {
-      color: #fff;
-    }
-  }
 }
